vapi/nvml.h


typedef struct nvmlDevice_st* nvmlDevice_t;
typedef struct nvmlPciInfo_st {
    char busId[16];                  
    unsigned int domain;             
    unsigned int bus;                
    unsigned int device;             
    unsigned int pciDeviceId;        
} nvmlPciInfo_t;
typedef struct nvmlEccErrorCounts_st {
    unsigned long long l1Cache;      
    unsigned long long l2Cache;      
    unsigned long long deviceMemory; 
    unsigned long long registerFile; 
} nvmlEccErrorCounts_t;
typedef struct nvmlUtilization_st {
    unsigned int gpu;                
    unsigned int memory;             
} nvmlUtilization_t;
typedef struct nvmlMemory_st {
    unsigned long long total;        
    unsigned long long free;         
    unsigned long long used;         
} nvmlMemory_t;
typedef enum nvmlEnableState_enum {
    NVML_FEATURE_DISABLED    = 0,     
    NVML_FEATURE_ENABLED     = 1      
} nvmlEnableState_t;
typedef enum nvmlTemperatureSensors_enum {
    NVML_TEMPERATURE_GPU      = 0     
} nvmlTemperatureSensors_t;
typedef enum nvmlComputeMode_enum {
    NVML_COMPUTEMODE_DEFAULT           = 0,  
    NVML_COMPUTEMODE_EXCLUSIVE_THREAD  = 1,  
    NVML_COMPUTEMODE_PROHIBITED        = 2,  
    NVML_COMPUTEMODE_EXCLUSIVE_PROCESS = 3   
} nvmlComputeMode_t;
typedef enum nvmlEccBitType_enum {
    NVML_SINGLE_BIT_ECC     = 0,      
    NVML_DOUBLE_BIT_ECC     = 1       
} nvmlEccBitType_t;
typedef enum nvmlEccCounterType_enum {
    NVML_VOLATILE_ECC      = 0,      
    NVML_AGGREGATE_ECC     = 1       
} nvmlEccCounterType_t;
typedef enum nvmlClockType_enum {
    NVML_CLOCK_GRAPHICS  = 0,        
    NVML_CLOCK_SM        = 1,        
    NVML_CLOCK_MEM       = 2         
} nvmlClockType_t;
typedef enum nvmlPStates_enum {
    NVML_PSTATE_0               = 0,       
    NVML_PSTATE_1               = 1,       
    NVML_PSTATE_2               = 2,       
    NVML_PSTATE_3               = 3,       
    NVML_PSTATE_4               = 4,       
    NVML_PSTATE_5               = 5,       
    NVML_PSTATE_6               = 6,       
    NVML_PSTATE_7               = 7,       
    NVML_PSTATE_8               = 8,       
    NVML_PSTATE_9               = 9,       
    NVML_PSTATE_10              = 10,      
    NVML_PSTATE_11              = 11,      
    NVML_PSTATE_12              = 12,      
    NVML_PSTATE_13              = 13,      
    NVML_PSTATE_14              = 14,      
    NVML_PSTATE_15              = 15,      
    NVML_PSTATE_UNKNOWN         = 32,      
} nvmlPstates_t;
typedef enum nvmlInforomObject_enum {
    NVML_INFOROM_OEM            = 0,       
    NVML_INFOROM_ECC            = 1,       
    NVML_INFOROM_POWER          = 2        
} nvmlInforomObject_t;
typedef enum nvmlReturn_enum {
    NVML_SUCCESS = 0,                   
    NVML_ERROR_UNINITIALIZED = 1,       
    NVML_ERROR_INVALID_ARGUMENT = 2,    
    NVML_ERROR_NOT_SUPPORTED = 3,       
    NVML_ERROR_NO_PERMISSION = 4,       
    NVML_ERROR_ALREADY_INITIALIZED = 5, 
    NVML_ERROR_NOT_FOUND = 6,           
    NVML_ERROR_INSUFFICIENT_SIZE = 7,   
    NVML_ERROR_INSUFFICIENT_POWER = 8,  
    NVML_ERROR_UNKNOWN = 999            
} nvmlReturn_t;
typedef struct nvmlUnit_st* nvmlUnit_t;
typedef enum nvmlFanState_enum {
    NVML_FAN_NORMAL       = 0,     
    NVML_FAN_FAILED       = 1      
} nvmlFanState_t;
typedef enum nvmlLedColor_enum {
    NVML_LED_COLOR_GREEN       = 0,     
    NVML_LED_COLOR_AMBER       = 1      
} nvmlLedColor_t;
typedef struct nvmlLedState_st {
    char cause[256];               
    unsigned int color;            
} nvmlLedState_t;
typedef struct nvmlUnitInfo_st {
    char name[96];                      
    char id[96];                        
    char serial[96];                    
    char firmwareVersion[96];           
} nvmlUnitInfo_t;
typedef struct nvmlPSUInfo_st {
    char state[256];                 
    unsigned int current;            
    unsigned int voltage;            
    unsigned int power;              
} nvmlPSUInfo_t;
typedef struct nvmlUnitFanInfo_st {
    unsigned int speed;              
    nvmlFanState_t state;            
} nvmlUnitFanInfo_t;
typedef struct nvmlUnitFanSpeeds_st {
    nvmlUnitFanInfo_t fans[24];      
    unsigned int count;              
} nvmlUnitFanSpeeds_t;
nvmlReturn_t DECLDIR nvmlInit();
nvmlReturn_t DECLDIR nvmlShutdown();
nvmlReturn_t DECLDIR nvmlSystemGetDriverVersion(char* version, unsigned int length);
nvmlReturn_t DECLDIR nvmlUnitGetCount(unsigned int *unitCount);
nvmlReturn_t DECLDIR nvmlUnitGetHandleByIndex(unsigned int index, nvmlUnit_t *unit);
nvmlReturn_t DECLDIR nvmlUnitGetUnitInfo(nvmlUnit_t unit, nvmlUnitInfo_t *info);
nvmlReturn_t DECLDIR nvmlUnitGetLedState(nvmlUnit_t unit, nvmlLedState_t *state);
nvmlReturn_t DECLDIR nvmlUnitGetPsuInfo(nvmlUnit_t unit, nvmlPSUInfo_t *psu);
nvmlReturn_t DECLDIR nvmlUnitGetTemperature(nvmlUnit_t unit, unsigned int type, unsigned int *temp);
nvmlReturn_t DECLDIR nvmlUnitGetFanSpeedInfo(nvmlUnit_t unit, nvmlUnitFanSpeeds_t *fanSpeeds);
nvmlReturn_t DECLDIR nvmlUnitGetDevices(nvmlUnit_t unit, unsigned int *deviceCount, nvmlDevice_t *devices);
nvmlReturn_t DECLDIR nvmlDeviceGetCount(unsigned int *deviceCount);
nvmlReturn_t DECLDIR nvmlDeviceGetHandleByIndex(unsigned int index, nvmlDevice_t *device);
nvmlReturn_t DECLDIR nvmlDeviceGetHandleBySerial(char *serial, nvmlDevice_t *device);
nvmlReturn_t DECLDIR nvmlDeviceGetHandleByPciBusId(char *pciBusId, nvmlDevice_t *device);
nvmlReturn_t DECLDIR nvmlDeviceGetName(nvmlDevice_t device, char* name, unsigned int length);
nvmlReturn_t DECLDIR nvmlDeviceGetSerial(nvmlDevice_t device, char* serial, unsigned int length);
nvmlReturn_t DECLDIR nvmlDeviceGetUUID(nvmlDevice_t device, char *uuid, unsigned int length);
nvmlReturn_t DECLDIR nvmlDeviceGetInforomVersion(nvmlDevice_t device, nvmlInforomObject_t object, char *version, unsigned int length);
nvmlReturn_t DECLDIR nvmlDeviceGetDisplayMode(nvmlDevice_t device, nvmlEnableState_t *display);
nvmlReturn_t DECLDIR nvmlDeviceGetPersistenceMode(nvmlDevice_t device, nvmlEnableState_t *mode);
nvmlReturn_t DECLDIR nvmlDeviceGetPciInfo(nvmlDevice_t device, nvmlPciInfo_t *pci);
nvmlReturn_t DECLDIR nvmlDeviceGetClockInfo(nvmlDevice_t device, nvmlClockType_t type, unsigned int *clock);
nvmlReturn_t DECLDIR nvmlDeviceGetFanSpeed(nvmlDevice_t device, unsigned int *speed);
nvmlReturn_t DECLDIR nvmlDeviceGetTemperature(nvmlDevice_t device, nvmlTemperatureSensors_t sensorType, unsigned int *temp);
nvmlReturn_t DECLDIR nvmlDeviceGetPowerState(nvmlDevice_t device, nvmlPstates_t *pState);
nvmlReturn_t DECLDIR nvmlDeviceGetPowerManagementMode(nvmlDevice_t device, nvmlEnableState_t *mode);
nvmlReturn_t DECLDIR nvmlDeviceGetPowerManagementLimit(nvmlDevice_t device, unsigned int *limit);
nvmlReturn_t DECLDIR nvmlDeviceGetPowerUsage(nvmlDevice_t device, unsigned int *power);
nvmlReturn_t DECLDIR nvmlDeviceGetMemoryInfo(nvmlDevice_t device, nvmlMemory_t *memory);
nvmlReturn_t DECLDIR nvmlDeviceGetComputeMode(nvmlDevice_t device, nvmlComputeMode_t *mode);
nvmlReturn_t DECLDIR nvmlDeviceGetEccMode(nvmlDevice_t device, nvmlEnableState_t *current, nvmlEnableState_t *pending);
nvmlReturn_t DECLDIR nvmlDeviceGetTotalEccErrors(nvmlDevice_t device, nvmlEccBitType_t bitType, nvmlEccCounterType_t counterType, unsigned long long *eccCounts);
nvmlReturn_t DECLDIR nvmlDeviceGetDetailedEccErrors(nvmlDevice_t device, nvmlEccBitType_t bitType, nvmlEccCounterType_t counterType, nvmlEccErrorCounts_t *eccCounts);
nvmlReturn_t DECLDIR nvmlDeviceGetUtilizationRates(nvmlDevice_t device, nvmlUtilization_t *utilization);
nvmlReturn_t DECLDIR nvmlUnitSetLedState(nvmlUnit_t unit, nvmlLedColor_t color);
nvmlReturn_t DECLDIR nvmlDeviceSetPersistenceMode(nvmlDevice_t device, nvmlEnableState_t mode);
nvmlReturn_t DECLDIR nvmlDeviceSetComputeMode(nvmlDevice_t device, nvmlComputeMode_t mode);
nvmlReturn_t DECLDIR nvmlDeviceSetEccMode(nvmlDevice_t device, nvmlEnableState_t ecc);
nvmlReturn_t DECLDIR nvmlDeviceClearEccErrorCounts(nvmlDevice_t device, nvmlEccCounterType_t counterType);